gitops/apps/ubi8-minimal-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubi8-minimal-app
  labels:
    app: ubi8-minimal-app
spec:
  selector:
    app: ubi8-minimal-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
