gitops/apps/ubi8-minimal-app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ubi8-minimal-app
  labels:
    app: ubi8-minimal-app
spec:
  to:
    kind: Service
    name: ubi8-minimal-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
